--- a/css/forms.css
+++ b/css/forms.css
@@ -1,6 +1,27 @@
 :root{
     --black : #000000a8;
-    --red : rgb(235 68 68);
+    /* --red : rgb(235 68 68); */
+    --blue: #007bff;
+    --indigo: #6610f2;
+    --purple: #6f42c1;
+    --pink: #e83e8c;
+    --red: #dc3545;
+    --orange: #fd7e14;
+    --yellow: #ffc107;
+    --green: #28a745;
+    --teal: #20c997;
+    --cyan: #17a2b8;
+    --white: #fff;
+    --gray: #6c757d;
+    --gray-dark: #343a40;
+    --primary: #007bff;
+    --secondary: #6c757d;
+    --success: #28a745;
+    --info: #17a2b8;
+    --warning: #ffc107;
+    --danger: #dc3545;  
+    --light: #f8f9fa;
+    --dark: #343a40;
 }
 
 .form_container {
@@ -57,4 +78,18 @@ input[type=submit]{
     background-color: #fff0f0;
     border: 1px solid black;
     border: 1px solid var(--red);
+    font-weight: 700;
+}
+input::file-selector-button{
+    font-weight: bold;
+    background-color: aliceblue;
+    color: var(--black); 
+    border: 0.4px dashed var(--blue);
+    border-radius: 3px;
+    width:50%;
+} 
+input[type=file]{
+    width: 100%;
+    background-color: var(--gray);
+    color: var(--light);
 }
