--- a/css/forms.css
+++ b/css/forms.css
@@ -73,13 +73,13 @@ input[type=submit]{
     color: var(--red);
     margin: 0em 0.2em;
 }
-.message_error{
+/* .message_error{
     color: var(--red);
     background-color: #fff0f0;
     border: 1px solid black;
     border: 1px solid var(--red);
     font-weight: 700;
-}
+} */
 input::file-selector-button{
     font-weight: bold;
     background-color: aliceblue;
@@ -92,4 +92,30 @@ input[type=file]{
     width: 100%;
     background-color: var(--gray);
     color: var(--light);
+}
+.editCategory_popup_container {
+    background: silver;
+    padding: 1em;
+    /* border: 1px solid black; */
+    width: fit-content;
+    margin: 1em auto;
+    border-radius: 10px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+}
+.close_editCategory {
+    font-weight: 900;
+    font-size: 20px;
+    background: var(--gray);
+    margin: auto;
+    width: fit-content;
+    float: right;
+    padding: 0px 10px;
+    border-radius: 10px;
+    border: 0px solid var(--black);
+    color: var(--white);
+    display: none;
 }
