--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,38 @@
 
+
 :root{
     --global_width : 80%;
-    --top_color : aliceblue;
-    --center_color : white;
-    --bottom_color : blue;
+    --aliceblue : aliceblue;
+    --white : white; 
+    --background: #F1F2F4; 
+        --black : #000000a8; 
+        --blue: #007bff;
+        --indigo: #6610f2;
+        --purple: #6f42c1;
+        --pink: #e83e8c;
+        --red: #dc3545;
+        --orange: #fd7e14;
+        --yellow: #ffc107;
+        --green: #28a745;
+        --teal: #20c997;
+        --cyan: #17a2b8;
+        --white: #fff;
+        --gray: #6c757d;
+        --gray-dark: #343a40;
+        --primary: #007bff;
+        --secondary: #6c757d;
+        --success: #28a745;
+        --info: #17a2b8;
+        --warning: #ffc107;
+        --danger: #dc3545;  
+        --light: #f8f9fa;
+        --dark: #343a40;
+        --success_bg: #c1ffd0; 
 }
 
+
 body {
-    background-color: var(--top_color);
+    background-color: var(--aliceblue);
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
     padding: 0px;
@@ -16,12 +41,12 @@ body {
 header.header_container {  
     height: 130px;
     width: 100%;
-    background: var(--center_color);
+    background: var(--white);
     outline: 1px solid black;
 }
 
 .fixed_nav {
-    background-color: var(--center_color);
+    background-color: var(--white);
     width: var(--global_width);
     padding: 1em;
     display: flow-root;
@@ -76,14 +101,7 @@ input.nav_search {
     float: right;
     width: 25%;
     height: 100%;
-}
-
-/* .login_button,
-.cart_button {
-    padding: 3px 15px;
-    float: right;
-} */
-
+} 
 i.fa-solid.fa-cart-shopping.button.cart_icon {
     font-size: 2em;
     cursor: pointer;
@@ -98,7 +116,7 @@ i.fa-solid.fa-cart-shopping.button.cart_icon {
 
 .menu_header { 
     width: 100%;
-    background: var(--top_color);
+    background: var(--aliceblue);
     margin: auto;
     height: fit-content;
     float: left;
@@ -218,16 +236,48 @@ i.fa-solid.fa-cart-shopping.button.cart_icon {
     width: 50%;
 }
 
-.menu_parent_category_container {
+.home_categories_container {
     padding: 10px;
-    background: aliceblue;
+    background: var(--white);
     float: left;
-    width: 100%;
+    width: 100%; 
+    overflow-y: hidden;
+    overflow-x: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-.menu_parent_category_container .separate_container {
-    background-color: lightsteelblue;
-    padding: 10px;
+.HomeSliders {
     float: left;
-    width: 100px;
-    margin: 0px 10px;
+    display: flex;
+    padding: 10px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+.homeMainPart {
+    float: left;
+    width: 100vw;
+}
+.homeMainLeft, .homeMainRight{
+    float: left;
+    width: 10vw;
+    height: 100vh;
+    background-color: var(--background);
+}
+.homeMainCenterSection{
+    float: left;
+    width: 80vw;
+    background-color: var(--background);
+}
+.HomeSliders .sliderNextArrow, .sliderPreviousArrow {
+    float: left;
+    cursor: pointer;
+    height: 100%;
+    font-size: 20px;
+    font-weight: 900;
+    color: var(--dark);
+}
+.sliderNextArrow:hover, .sliderPreviousArrow:hover{
+    color: var(--black);
 }
