--- a/css/tablets_view.css
+++ b/css/tablets_view.css
@@ -1,5 +1,5 @@
 
-@media screen and (max-width:800px) {
+@media screen and (max-width:1100px) {
     .fixed_nav {
         width: 90%;
     }
@@ -21,5 +21,11 @@
     }
     .desktop_view {
         display: none;
+    }
+    .home_categories_container{
+        justify-content: start;
+    }
+    .slider_container img{
+        width: 100%;
     }
 }
