--- a/css/common.css
+++ b/css/common.css
@@ -133,12 +133,17 @@
 
 .dataTableHeader .datatable_field{
     padding: 2px 10px;
-    border-radius: 0px;
+    border-radius: 5px;
     border: 1px solid var(--dark);
     background-color: var(--white);
 }
 button.searchCategoriesButton {
     border-left: none !important;
+    height: 33px;
+} 
+button.searchCategoriesButton svg{
+    height: 25px !important;
+    width: 25px !important;
 }
 .dataTableHeader .showHideColumn{
     cursor: pointer;
@@ -204,4 +209,19 @@ select.datatable_field.category_record_showLimit {
 .oesfrontLoginButton svg{
     height: 30px !important;
     width: 30px !important;
+}
+.oes_field {
+    border-radius: 5px;
+    border: 1px solid var(--dark);
+    padding: 2px 10px;
+}
+.oes_container_bulk_option {
+    /* padding: 1em; */
+    color: var(--dark);
+    /* font-weight: 600; */
+    float: left;
+    margin-right: 15px;
+}
+.apply_button {
+    background-color: var(--bg_silver);
 }
