--- a/css/common.css
+++ b/css/common.css
@@ -88,15 +88,16 @@
     font-weight: 900;
     color: var(--green);
     border: 1px solid var(--green);
-    right: 5%;
-    display: none;
+    left: 50%;
+    top: 0px;
+    display: none; 
     z-index: 9999;
 }
 .message_error{
-    color: var(--red);
-    background-color: var( --light );
-    border: 1px solid var( --black );
-    border: 1px solid var(--red);
+    color: var(--red) !important;
+    background-color: var( --light ) !important;
+    border: 1px solid var( --black ) !important;
+    border: 1px solid var(--red) !important;
     font-weight: 700;
 }
 .form_edit_popup{
@@ -114,7 +115,7 @@
     float: left;
 }
 .dataTableHeader, .datatablefooter {
-    padding: 2px 10px;
+    padding: 15px 10px;
     background: var(--background);
     width: 100%;
     display: inline-block;
@@ -127,13 +128,13 @@
 .dataTableHeader .searchRecord, 
 .dataTableHeader .showHideColumn{
     float: right;
-    /* width: 20%;  */
+    /* width: 20%; */
     margin: 0px 5px;
 }
 
 .dataTableHeader .datatable_field{
     padding: 2px 10px;
-    border-radius: 5px;
+    border-radius: 0px;
     border: 1px solid var(--dark);
     background-color: var(--white);
 }
